# youtube-qa

./: .gitignore  pyproject.toml
tests/: test_streaming.py
ytb_clone/src/: utils.py
ytb_clone/src/api/: app.py  model.py
ytb_clone/src/app/: app.py  services.py
ytb_clone/src/database/vector_db/: qdrant.py
ytb_clone/src/embedding/image/: clip.py
ytb_clone/src/embedding/text/: clip.py  openai.py
ytb_clone/src/fetch/downloader/: youtube.py
ytb_clone/src/llm/: openai_vision.py
